# fastapi-github-actions

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  prod.env  pyproject.toml  start.sh
.github/workflow/: ci.yaml
.github/workflows/: push-ecr.yaml
app/: __init__.py  main.py
app/api/: __init__.py  metrics_api.py  user_api.py
app/core/: __init__.py  deps.py  jwt.py  redis_client.py  security.py
app/db/: __init__.py  database.py  docker-compose.yaml
app/model/: LoginRequest.py  RefreshSession.py  RegisterRequest.py  User.py  __init__.py
app/service/: __init__.py
app/utils/: hash.py
terraform/: alb.tf  ecs.tf  endpoints.tf  iam.tf  main.tf  output.tf  security-groups.tf  vpc.tf
tests/: test_api.py
