[project]
name = "fastapi-github-actions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
